Dec 11, 2006

  * FIXED: Some code cleanup to be compatible with SWI-Prolog 5.6.25.
    Should still be compatible to older versions.

Jan 18, 2006

  * ADDED: Option --nochecksaved

Dec 5, 2005

  * ADDED: Datatype stuff to the rdfs.rdfs base ontology.

Nov 30, 2005

  * ADDED: Allow dropping objects from Triple20 on PceEmacs to include
    resources in Prolog syntax.

Nov 22, 2005

  * ADDED: Namespace abbreviation command.  Restructured the infrastructure
    for the dialog.

Oct 19, 2005

  * MODIFIED: Show root concepts of loaded files.

  * ADDED: File/Load required base ontologies.  Simplified and generalised
    its computation.

  * ADDED: SHIFT-click on Find *adds* search hits to the view.

  * ADDED: View/Show roots/... menu to highlight the roots of classes and
    properties from a specified file.

Oct 18, 2005

  * ADDED: rdf-diagram to bind ^L to ->layout

Sep 8, 2005

  * ADDED: Save PostScript to Windows.

Sep 6, 2005

  * ADDED: Simple print option for hierarchy and diagram.

Aug 9, 2005

  * Modify root_property/2 to check for super-properties of the same
    class only.

Jul 26, 2005

  * Fixed owl_satisfies/2 handling for `complement_of'.  Bob Wielinga.

May 20, 2005

  * Fixed display of `view->triples' for property nodes.

May 19, 2005

  * Provide namespace definitions as default only
	
May 11, 2005

  * Enhance embedding

May 2, 2005

  * FIXED: various issues with search and selecting values.  Allow for
    text of the form NS:String to search in a namespace.  Search for
    selecting values has been improved a lot.

Apr 18, 2005

  * ADDED: Search in all properties

Apr 3, 2005

  * ADDED: "Show my subjects" to the graph vizualisation.

  * CLEANUP: Some mode issues in the diagram vizualisation.

Mar 30, 2005

  * Added loading Prolog plugins from the commandline

  * Show subclasses of literal using `doc.xpm'.

Mar 29, 2005

  * Fix toplevel after changing to library.

Mar 3, 2005
